<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TechAmove</string>
    <string name="addcard_business_name">Virksomhedsnavn</string>
    <string name="addcard_business_services">Forretningsservice</string>
    <string name="addcard_save">Gem</string>
    <string name="addcard_social_media">Sociale medier</string>
    <string name="addcard_website_link">Hjemmeside</string>
    <string name="btn_save_business_card">Gem visitkort</string>
    <string name="camera_permission_message">Kamera adgang påkrævet</string>
    <string name="card_delete_msg">Ønsker du at slette dette kort?</string>
    <string name="dialog_enter_licence_key_to_continue">Indtast licensnøglen for at fortsætte</string>
    <string name="dialog_licence_key">Licensnøgle</string>
    <string name="edt_enter_bussines_service">Indtast navnet på forretningsservicen</string>
    <string name="dollor_sysmblo" translatable="false">$</string>
    <string name="edt_enter_bussiness_name">Indtast virksomhedens navn</string>
    <string name="edt_enter_email">Indtast e-mail</string>
    <string name="edt_enter_full_name">Indtast dit fulde navn</string>
    <string name="edt_enter_gmail_link">Indtast Google+ link</string>
    <string name="edt_enter_instagram_link">Indtast Instagram link</string>
    <string name="edt_enter_licence_key">Indtast licensnøgle</string>
    <string name="edt_enter_linkedin_link">Indtast LinkedIn link</string>
    <string name="edt_enter_mobile_number">Indtast mobilnummer</string>
    <string name="edt_enter_twitter_link">Indtast Twitter link</string>
    <string name="edt_enter_website_name">Indtast hjemmesidens link</string>
    <string name="edt_facebook_link">Indtast Facebook link</string>
    <string name="home_add_new_card">Tilføj nyt kort</string>
    <string name="lable_cancel">Annuller</string>
    <string name="lable_continue">Fortsæt</string>
    <string name="lable_no">Nej</string>
    <string name="lable_ok">Okay</string>
    <string name="lable_share">Del</string>
    <string name="lable_yes">Ja</string>
    <string name="login_dont_have_account">Har du ikke en konto?</string>
    <string name="login_mobile_number">Mobilnummer</string>
    <string name="login_signin">Log ind</string>
    <string name="logout">Log ud</string>
    <string name="logout_msg">Er du sikker på, at du vil logge ud?</string>
    <string name="menu_logout">Log ud</string>
    <string name="menu_my_business_card">Mit visitkort</string>
    <string name="menu_privacypolicy">Fortrolighedspolitik</string>
    <string name="menu_qr_scanner">QR-scanner</string>
    <string name="menu_save_business_card">Gem visitkort</string>
    <string name="menu_setting">Indstillinger</string>
    <string name="menu_video_material">Videomateriale</string>
    <string name="mobile__code_vefify">Skriv verifikationskoden</string>
    <string name="mobile_resend_code_in">Send koden igen</string>
    <string name="mobile_verify_otp">Bekræft OTP</string>
    <string name="plan_submit">Indsend</string>
    <string name="setting_change_language">Skift sprog</string>
    <string name="setting_danish">Dansk</string>
    <string name="setting_english">Engelsk</string>
    <string name="setting_german">Tysk</string>
    <string name="share_connect_network">Tilslut / netværk</string>
    <string name="signup_account_type">Kontotype</string>
    <string name="signup_alredy_have_account">har du allerede en bruger?</string>
    <string name="signup_email">E-mail</string>
    <string name="signup_free_account">Gratis konto</string>
    <string name="signup_full_name">Fulde navn</string>
    <string name="signup_premium_account">Premium-konto</string>
    <string name="success_your_account_successfully_created">Din konto er oprettet</string>
    <string name="title_add_business_card">Tilføj visitkort</string>
    <string name="title_connection">Forbindelse</string>
    <string name="title_edit_business_card">Rediger visitkort</string>
    <string name="title_payment_plan">Betalingsplan</string>
    <string name="title_qr_scanner">QR-scanner</string>
    <string name="title_sign_up">Tilmeld</string>
    <string name="tab_title_ownvideo">Egen video</string>
    <string name="tab_title_shared_video">Delt video</string>
    <string name="lable_video">Video</string>
    <string name="title_notification">Notifikation</string>
    <string name="network_error_msg">Vi kan ikke oprette forbindelse til serveren. Kontroller din internetforbindelse, og prøv igen.</string>
    <string name="empty_list_msg">Der er ingen Data</string>
    <string name="err_msg_account_type">Vælg venligst en kontotype</string>
    <string name="err_msg_business_name">Indtast venligst virksomhedens navn</string>
    <string name="err_msg_business_services">Indtast venligst en service</string>
    <string name="err_msg_country_code">Vælg venligst et land</string>
    <string name="err_msg_email">Indtast venligst en e-mail</string>
    <string name="err_msg_full_name">Indtast venligst dit fulde navn</string>
    <string name="err_msg_invalid_email">Indtast venligst en gyldig e-mail</string>
    <string name="err_msg_mobile">Indtast venligst dit mobilnummer</string>
    <string name="err_msg_otp_valid">Indtast venligst en gyldig OTP</string>
    <string name="err_msg_profile">Tilføj venligst et  profilbilled</string>
    <string name="err_msg_select_one">Vælg mindst en bruger</string>
    <string name="err_msg_website">Indtast venligst hjemmesidens navn</string>
    <string name="lable_camera">Kamera</string>
    <string name="lable_gallery">Galerie</string>
    <string name="lable_loading">Indlæser...</string>
    <string name="lable_social">Social</string>
    <string name="lable_try_again">Prøv igen</string>
    <string name="lable_video_upload_progress">Uploader video</string>
    <string name="menu_share_business_card">Del visitkort</string>
    <string name="mobile_do_not_receive_code">Modtog du ikke en bekræftelseskode?</string>
    <string name="mobile_resend_code">Send koden igen</string>
    <string name="title_dialog_video_picker">Vælg fra ...</string>
    <string name="video_delete_msg">Vil du slette denne video?</string>
    <string name="btn_add_new_contact">Tilføj ny kontakt</string>
    <string name="add_member">Tilføj medlem</string>
    <string name="email_not_valid">Brugeren er ikke gyldig</string>
    <string name="lbl_yearly">Årlig</string>
    <string name="edt_enter_new_password">Indtast ny adgangskode</string>
    <string name="edt_enter_old_password">Indtast din gamle adgangskode</string>
    <string name="edt_enter_referral_Code">Indtast henvisningskode</string>
    <string name="edt_enter_confirm_password">Indtast adgangskode igen</string>
    <string name="edt_password">Indtast adgangskode</string>
    <string name="err_msg_confirm_password">Indtast adgangskode igen</string>
    <string name="err_msg_new_password">Indtast ny adgangskode</string>
    <string name="err_msg_old_password">Indtast din gamle adgangskode</string>
    <string name="err_msg_password">Indtast adgangskode</string>
    <string name="err_msg_password_not_match">adgangskode og bekræft adgangskode stemmer ikke overens</string>
    <string name="lbl_forgot_paasword">Glemt adgangskode?</string>
    <string name="lbl_my_id">Min id :</string>
    <string name="lbl_new_password">Ny adgangskode</string>
    <string name="lbl_old_password">Gammel adgangskode</string>
    <string name="login_password">Adgangskode</string>
    <string name="menu_change_password">Skift adgangskode</string>
    <string name="msg_temporary_password_">Vi sender en midlertidig adgangskode til din mail. Log ind med den midlertidige adgangskode.</string>
    <string name="signup_confirm_password">Bekræft adgangskode</string>
    <string name="signup_referral_code">Henvisningskode</string>
    <string name="title_forgot_password">Glemt adgangskode</string>
    <string name="lbl_affiliate">Affiliate-konto</string>
</resources>