<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_gravity="center"
            android:src="@drawable/key" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="10dp"
            android:src="@drawable/ic_close" />

    </FrameLayout>

    <TextView
        style="@style/textBlack20Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/dialog_enter_licence_key_to_continue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="20sp"
        android:paddingEnd="15dp"
        android:paddingBottom="20sp">

        <TextView
            style="@style/textLigtBlue15Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_licence_key" />

        <EditText
            android:id="@+id/edtLicenceKey"
            style="@style/edtBlack15Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/edt_enter_licence_key"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <Button
            android:id="@+id/btnContinue"
            style="@style/btnBlueBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/lable_continue" />
    </LinearLayout>

</LinearLayout>