<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    android:orientation="vertical">

    <ImageView
        android:layout_width="140sp"
        android:layout_height="120sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:src="@mipmap/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/textBlack20Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login_signin" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            app:cardElevation="7dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingTop="20sp"
                android:paddingEnd="15dp"
                android:paddingBottom="20sp">

                <TextView
                    style="@style/textLigtBlue15Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_email" />


                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/edtBlack15Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/edt_enter_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

                <TextView
                    style="@style/textLigtBlue15Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/login_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edittext_background"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtPassword"
                        style="@style/edtBlack15Regular"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:hint="@string/edt_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />

                    <ImageView
                        android:id="@+id/imgToggleShow"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:padding="5dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/show" />

                    <ImageView
                        android:id="@+id/imgToggleHide"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/hide"
                        android:visibility="gone" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnSignIn"
                    style="@style/btnBlueBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/login_signin" />

                <TextView
                    android:id="@+id/txtForgot"
                    style="@style/textBlue16Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingTop="12dp"
                    android:paddingRight="10dp"
                    android:text="@string/lbl_forgot_paasword" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/textBlack16Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_dont_have_account" />

        <TextView
            android:id="@+id/txtSignUp"
            style="@style/textBlue16Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/title_sign_up" />
    </LinearLayout>

</RelativeLayout>